Kubernetes/Simple-deploy/Ejercicio-simple/2deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-deploy
  Namespace: test
  labesls: 
    app: hola
spec:
  selector:
    matchLabels:
      app: hola
  replicas: 4
  template:
    metadata:
      labels:
        app: hola
    spec:
      containers:
      - name: hola
        image: pbitty/hello-from:latest
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
