Kubernetes/Simple-deploy/Ejercicio-simple/3servicio.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hola-servi
  namespace: test
spec:
  selector:
    app: hola
  type: ClusterIP
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80
