Kubernetes/Simple-deploy/Ejercicio-simple/4ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-hola
  namespace: test
spec:
  rules: 
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: hola-servi
            port: 
              number: 80
